# redis-protocol.rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  LICENSE-MIT  README.md  rustfmt.toml
.circleci/: config.yml
benches/: decode.rs  encode.rs  resp2_decode.rs  resp2_encode.rs  utils.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: resp2_bytes.rs  resp2_owned.rs  resp3_bytes.rs  resp3_owned.rs
src/: codec.rs  decode.rs  encode.rs  error.rs  lib.rs  macros.rs  nom_bytes.rs  routing.rs  types.rs  utils.rs
src/backup/: lib.rs  nom_bytes.rs  utils.rs
src/backup/decode_mut/: mod.rs  resp3.rs  utils.rs
src/backup/resp2/: decode.rs  encode.rs  types.rs  utils.rs
src/backup/resp3/: decode.rs  encode.rs
src/convert/: mod.rs  resp2.rs  resp3.rs
src/decode_mut/: frame.rs  mod.rs  resp2.rs  resp3.rs  utils.rs
src/resp2/: _decode.rs  decode.rs  encode.rs  mod.rs  types.rs  utils.rs
src/resp3/: decode.rs  encode.rs  mod.rs  types.rs  utils.rs
tests/: doc.sh  environ  lib.rs  run.sh
tests/codec/: base.dockerfile  base.yml  codec-tests.sh  codec-tests.yml  default.conf  docker-bash.sh  mod.rs  runner.sh
